--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@ p, h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
 }
+
+.w-2 {
+    width: 0.5rem;
+}
+
+.h-2 {
+    height: 0.5rem;
+}
