--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+html {
+    scroll-padding-top: 66px;
+    scroll-behavior: smooth;
+  }
+  
 body {
     font-family: "Inter", sans-serif;
     color: #161c2d;
